--- a/Schopenhauer_GPT_2.ipynb
+++ b/Schopenhauer_GPT_2.ipynb
@@ -210,7 +210,7 @@
         "colab": {}
       },
       "source": [
-        "conditional_model(seed=1, model_name='345M', sentences=['What is the Will?'])"
+        "conditional_model(seed=1, model_name='345M', sentences=['What is the life?'])"
       ],
       "execution_count": null,
       "outputs": []
